--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,10 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <jdk>1.8</jdk>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
+        <java.version>21</java.version>
+        <jdk>${java.version}</jdk>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <spring-boot.version>2.5.2</spring-boot.version>
         <spring-cloud.version>3.0.3</spring-cloud.version>
     </properties>
