--- a/deploy.yaml
+++ b/deploy.yaml
@@ -1,33 +1,34 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: $SVC_NAME
+  name: $APP_NAME
+  labels:
+    service: $APP_NAME
 spec:
-  type: ClusterIP
   ports:
-    - name: http
-      port: 8080 # change this to the desired port if needed
+    - port: 8080 # change this to the desired port if needed
   selector:
-    app: $SVC_NAME
+    app: $APP_NAME
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: $SVC_NAME # change this to the desired name if needed
+  name: $APP_NAME # change this to the desired name if needed
 spec:
+  replicas: $REPLICAS
   selector:
     matchLabels:
-      app: $SVC_NAME # change this to the desired label if needed
-  replicas: 1
+      app: $APP_NAME # change this to the desired label if needed
   template:
     metadata:
       labels:
-        app: $SVC_NAME # change this to the desired label if needed
+        app: $APP_NAME # change this to the desired label if needed
+        routectl-name: $APP_NAME
+        routectl-ns: placeholder
     spec:
       containers:
-        - image: $IMG_REPO/$SVC_NAME:$IMG_TAG # change this to the desired image if needed
-          name: $SVC_NAME # change this to the desired name if needed
-          imagePullPolicy: Always
+        - image: $IMAGE_NAME # change this to the desired image if needed
+          name: $APP_NAME # change this to the desired name if needed
           ports:
-            - containerPort: 8080 # change this to the desired port if needed 
-              name: http # change this to the desired name if needed 
+            - containerPort: 8080 # change this to the desired port if needed
+              name: http # change this to the desired name if needed
